final product, css touch ups.

--- a/main.css
+++ b/main.css
@@ -82,6 +82,12 @@ nav{
 }
 
 
+h1{
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
 footer{
     background-color: #F7C560; 
     height: 5rem;
